# WaveEngine

./: .gitignore  CMakeLists.txt
install/shaders/00/: 00_test.frag  00_test.vert  02_texture.frag  02_texture.vert  03_camera.frag  03_camera.vert  03_just_play.frag
install/shaders/shader_lib/: basic.frag  basic.vert
source/editor/: main_window.hpp
source/engine/: CMakeLists.txt  wave_engine.hpp
source/engine/core/: CMakeLists.txt
source/engine/core/application/: application.cpp  application.hpp  entry_point.hpp
source/engine/core/ecs/: entity_admin.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  wave_component.hpp  wave_entity.hpp  wave_system.hpp
source/engine/core/render/: camera.hpp  render_target.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
source/engine/core/resources/: shader_lib.cpp  shader_lib.hpp  texture_lib.cpp  texture_lib.hpp
source/engine/game_framework/: CMakeLists.txt  game_framework.cpp  game_framework.hpp
source/engine/game_framework/controller/: trackball_camera_system.hpp  trackball_controller_component.hpp
source/engine/platform/: CMakeLists.txt
source/engine/platform/event/: event.hpp  event_dispatcher.hpp  event_observer.hpp
source/engine/platform/opengl/: gl_vertex_array.cpp  gl_vertex_array.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp  shader.cpp  shader.hpp
source/engine/platform/utils/: constans.hpp  file_utils.cpp  file_utils.hpp  log.cpp  log.hpp  non_copyable.hpp  uuid.hpp
source/engine/platform/window/: wave_window.cpp  wave_window.hpp
source/sandbox/: CMakeLists.txt
source/sandbox/00_application/: 00_application.cpp  CMakeLists.txt
source/sandbox/01_log/: 01_log.cpp  CMakeLists.txt
source/sandbox/01_triangle/: 01_triangle.cpp  CMakeLists.txt
source/sandbox/02_test_four_edge/: 02_test_four_edge.cpp  CMakeLists.txt
source/sandbox/02_texture/: 02_texture.cpp  CMakeLists.txt
source/sandbox/03_camera/: 03_camera.cpp  CMakeLists.txt
source/sandbox/04_ecs/: 04_ecs.cpp  CMakeLists.txt
(+23 files in other folders)
